# Serkan-nemli-

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run-dev.sh
contracts/: openapi.yaml
deprecations/: README.md
docs/: ASSUMPTIONS.md
migrations/: 001_init_version.sh  rollback.sh
policy/: policies.json
src/: main.py
src/core/: models.py  service.py
src/policy/: evaluator.py
src/privacy/: controls.py
src/quantum/: simulator.py
src/security/: auth.py  pqc.py
src/telemetry/: events.py
src/transport/: adapters.py  http_api.py
src/update/: channel.py
tests/: test_integration_http.py  test_unit_quantum.py
